<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/logo_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/store_logo_128"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/store"
        android:textColor="@color/store_string"
        android:textSize="86sp"/>

    <TextView
        android:id="@+id/category_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/e_commerce_store"
        android:textColor="@color/store_string"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/version_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="40dp"
        android:text="@string/version"
        android:textColor="@color/store_string"
        android:textSize="18sp"/>

</LinearLayout>